# LabeloxAV

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cloud/: .gitignore  README.md  autolabel_pod.py  mapfusion_pod.py  perception_pod.py  provision_runpod.sh  relabel_pod.py  runpod_api.py  setup_perception.sh  setup_pod.sh  smoke_test.py
compute/: __init__.py
compute/runpod/: __init__.py  cost.py  orchestrator.py  session.py
compute/worker/: __init__.py
configs/: default.yaml
core/: bus.py  config.py  embeddings.py  logging.py  provenance.py  schemas.py  storage.py  timebase.py
db/: Dockerfile.postgres  models.py  session.py
db/migrations/: env.py
ontology/: custom_classes.json  labelox_in_v0.yaml  signs_in_v0.yaml
scripts/: backfill_embeddings.py  batch_process.py  cleanup_test_pollution.py  download_models.py  download_pii_models.py  healthcheck.py  idd_to_yolo.py  inspect_idd.py  make_inspector_fixture.py  seed_ontology.py  setup_minio_cors.py
services/activelearn/: budget.py  loop.py  selector.py
services/agent/: __init__.py  annotation_copilot.py  attribute_agent.py  buyer_agent.py  cleanup_sweep.py  copilot.py  coverage.py  critic.py  crosscam_agent.py  cuboid_agent.py  disagreement.py  doc_agent.py  drift_investigator.py  error_daemon.py  fleet_dispatch.py  flywheel.py  frame_agent.py  fresh.py  nl.py  ontology_steward.py  ops_agent.py  overnight_auditor.py  policy.py  propagate_agent.py  reconcile.py  relabel_agent.py  runs.py  scenario_miner.py  temporal_repair.py  training_daemon.py  weather.py
services/analytics/: curation.py  dashboards.py  quality.py
services/anonymize/: anonymizer.py  backfill.py  compliance.py  detectors.py  speech.py
services/api/: deps.py  main.py  sam_service.py
services/autolabel/: calibrate.py  classify_crop.py  cloud.py  drivable.py  ego_mask.py  fusion.py  gate.py  grounding.py  isotonic.py  ontology.py  persist.py  quality_reviewer.py  redetect.py  runner.py
services/calibration/: estimate.py  extrinsics.py  extrinsics_check.py  import_calib.py  intrinsics.py  report.py  resolve.py  store.py  timesync.py
services/curation/: slices.py
services/dynamics/: compute.py
services/errordetect/: confident.py  consistency.py  critic_detector.py  embedding_outlier.py  near_dup.py  policy.py  queue.py
services/export/: adapter_bdd.py  adapter_coco.py  adapter_kitti.py  adapter_nuscenes.py  adapter_openlabel.py  adapter_parquet.py  adapter_yolo.py  dataset.py  datasheet.py  records.py  snapshots.py
services/govern/: audit.py  champion.py  control_sample.py  controller.py  daemon.py  drift.py  killswitch.py  registry.py
services/hdmap/: cloud.py  elevation.py  export.py  run.py  (+3 more)
tests/: conftest.py  test_2d3d_consistency.py  test_agent.py  test_aggregate_label.py  test_annotation_copilot.py  test_attr_audit.py  test_attribute_agent.py  test_attribute_scope.py  test_audio_envelope.py  test_auth.py  test_bev_labels.py  test_buyer_agent.py  test_calibration_estimate.py  test_calibration_extrinsics.py  test_calibration_import.py  test_calibration_resolve.py  test_calibration_store.py  test_calibration_wired.py  test_cleanup_sweep.py  test_cloud_warm_session.py  test_consistency_qa.py  test_copilot.py  test_coverage.py  test_crosscam_agent.py  test_cuboid_agent.py  test_curation_slices.py  test_custom_classes.py  test_disagreement.py  test_doc_agent.py  test_dpdpa_gate.py  test_drift_investigator.py  test_editor_api.py  test_ego_mask.py  test_egostate.py  test_embed_prep.py  test_error_daemon.py  test_fleet_dispatch.py  test_fusion_dedup.py  test_gate_a_pii.py  test_gate_b_m9.py  (+85 more)
versioning/: collaborate.py  lakefs_store.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+357 files in other folders)
