[project]
name = "labeloxav"
version = "0.1.0"
description = "LabeloxAV: India-specific autonomous-driving data engine (single-box edition)"
requires-python = ">=3.11,<3.12"

# Base runtime. Heavy ML/GPU wheels live in the [project.optional-dependencies] ml extra
# so the infra milestones (M0/M1) install and verify without CUDA wheels present.
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "psycopg[binary]==3.2.3",
    "alembic==1.14.0",
    "geoalchemy2==0.16.0",
    "boto3==1.35.81",
    "redis==5.2.1",
    "aiokafka==0.12.0",
    "pgvector==0.4.2",
    "pyyaml==6.0.2",
    "structlog==24.4.0",
    "numpy==1.26.4",
    "shapely==2.0.6",
    "pyproj==3.7.0",
    "opencv-python-headless==4.10.0.84",
    "supervision==0.25.1",
    "pyarrow==18.1.0",
    "mcap==1.2.1",
    "mcap-protobuf-support==0.5.2",
    "protobuf==5.29.2",
    "pypcd4==1.4.3",
    "laspy[lazrs]==2.7.0",
    "click==8.1.8",
    "httpx==0.28.1",
    "scikit-learn==1.6.0",       # also used by cleanlab confident learning (Phase 4 M4.1)
    "cleanlab==2.7.1",           # confident learning: label-error detection on accepted data (M4.1)
    "lakefs==0.11.1",            # git-like branch/commit/merge over the object store (M4.3)
    "lakefs-spec==0.11.1",       # fsspec filesystem for lakeFS (M4.3)
]

[project.optional-dependencies]
# GPU/perception. Install with: uv pip install -e ".[ml]" --index-strategy unsafe-best-match
# torch cu128 wheels are required for RTX 5080 (Blackwell, sm_120).
ml = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "ultralytics==8.3.0",
    "clip-anytorch==2.6.0",      # provides `import clip` for YOLO-World text prompts (Path B)
    "ftfy==6.3.1",
    "setuptools<81",             # 81+ drops pkg_resources, which clip imports
    "transformers==4.52.4",      # bumped from 4.47.1: ships SigLIP 2 (Data Intelligence Layer, M1.0)
    "timm==1.0.27",              # DINOv3 ViT-B/16 via the non-gated timm mirror (M1.0 visual backbone)
    "imagehash==4.3.1",          # perceptual-hash prefilter for near-duplicate detection (M1.1)
    "accelerate==1.2.1",
    "bitsandbytes==0.45.0",
    "qwen-vl-utils==0.0.8",
    "pillow==11.0.0",
    "scikit-learn==1.6.0",       # isotonic calibration fit (Gate B / M9); serve-time uses np.interp
    "hdbscan==0.8.40",           # density clustering for rare-scenario discovery (M1.5)
    "umap-learn==0.5.12",        # 2D projection for the analytics cluster map (M1.7)
]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
    "mypy==1.14.0",
    "foxglove-schemas-protobuf==0.3.0",
]

[project.scripts]
lbx-ingest = "services.ingest.run:main"
lbx-label = "services.autolabel.runner:main"
lbx-export = "services.export.dataset:main"
lbx-import = "services.imports.run:main"
lbx-gold = "services.training.gold:main"
lbx-train-worker = "services.training.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "db", "services"]

[tool.uv]
# torch cu128 wheels come from the PyTorch CUDA index.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
